[gd_scene load_steps=3 format=3 uid="uid://11e52ljernnq"]

[ext_resource type="Script" path="res://script/UI/game_AnimalCrossing_UI.gd" id="1_3t7gs"]
[ext_resource type="Theme" uid="uid://1ufiqhcbexv4" path="res://asset/UI/theme/base_theme.tres" id="2_l3lvl"]

[node name="game_AnimalCrossing_UI" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3t7gs")

[node name="GameScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_l3lvl")

[node name="Esc" type="Button" parent="GameScreen"]
layout_mode = 1
offset_left = 29.0
offset_top = 22.0
offset_right = 109.0
offset_bottom = 62.0
theme = ExtResource("2_l3lvl")
theme_override_font_sizes/font_size = 20
text = " 菜单(ESC) "

[node name="HBoxContainer" type="HBoxContainer" parent="GameScreen"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -256.0
offset_top = -42.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="GameScreen/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "移动方式："

[node name="Label2" type="Label" parent="GameScreen/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "WASD+SPACE"

[node name="CheckButton" type="CheckButton" parent="GameScreen"]
layout_mode = 0
offset_left = 132.0
offset_top = 160.0
offset_right = 176.0
offset_bottom = 184.0
theme_override_font_sizes/font_size = 22
button_pressed = true

[node name="HSlider" type="HSlider" parent="GameScreen"]
layout_mode = 0
offset_left = 139.0
offset_top = 199.0
offset_right = 255.0
offset_bottom = 215.0
value = 50.0

[node name="Label" type="Label" parent="GameScreen"]
layout_mode = 0
offset_left = 32.0
offset_top = 156.0
offset_right = 142.0
offset_bottom = 183.0
theme_override_font_sizes/font_size = 22
text = "弯曲开关："

[node name="CheckButton2" type="CheckButton" parent="GameScreen"]
layout_mode = 0
offset_left = 132.0
offset_top = 112.0
offset_right = 176.0
offset_bottom = 136.0
pivot_offset = Vector2(-36, 51)
theme_override_font_sizes/font_size = 22

[node name="Label3" type="Label" parent="GameScreen"]
layout_mode = 0
offset_left = 32.0
offset_top = 108.0
offset_right = 142.0
offset_bottom = 135.0
pivot_offset = Vector2(64, 55)
theme_override_font_sizes/font_size = 22
text = "切换镜头："

[node name="Label2" type="Label" parent="GameScreen"]
layout_mode = 0
offset_left = 32.0
offset_top = 196.0
offset_right = 142.0
offset_bottom = 223.0
theme_override_font_sizes/font_size = 22
text = "弯曲曲率："

[node name="PauseScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_l3lvl")

[node name="ColorRect" type="ColorRect" parent="PauseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.70865, 0.383873, 0.0692319, 0.741176)

[node name="box" type="HBoxContainer" parent="PauseScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -170.0
offset_top = -74.0
offset_right = 169.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="name" type="VBoxContainer" parent="PauseScreen/box"]
layout_mode = 2

[node name="Music2" type="Label" parent="PauseScreen/box/name"]
layout_mode = 2
size_flags_vertical = 6
text = "背景音乐："
horizontal_alignment = 2
vertical_alignment = 1

[node name="SFX2" type="Label" parent="PauseScreen/box/name"]
layout_mode = 2
size_flags_vertical = 6
text = "音效："
horizontal_alignment = 2
vertical_alignment = 1

[node name="SFX3" type="Label" parent="PauseScreen/box/name"]
layout_mode = 2
size_flags_vertical = 6
text = "切换角色："
horizontal_alignment = 2
vertical_alignment = 1

[node name="set" type="VBoxContainer" parent="PauseScreen/box"]
layout_mode = 2

[node name="music" type="HSlider" parent="PauseScreen/box/set"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
value = 50.0

[node name="SFX" type="HSlider" parent="PauseScreen/box/set"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
value = 80.0

[node name="OptionButton" type="OptionButton" parent="PauseScreen/box/set"]
layout_mode = 2
item_count = 3
popup/item_0/text = "苏珊猴子"
popup/item_0/id = 0
popup/item_1/text = "圆球"
popup/item_1/id = 1
popup/item_2/text = "茶壶"
popup/item_2/id = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PauseScreen"]
layout_direction = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -187.5
offset_top = 160.0
offset_right = 187.5
offset_bottom = 215.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(180, 25)
alignment = 1

[node name="Continue" type="Button" parent="PauseScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
toggle_mode = true
text = " 继续游戏 "

[node name="Exit" type="Button" parent="PauseScreen/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 6
text = " 返回主界面 "

[connection signal="mouse_entered" from="GameScreen/Esc" to="." method="_on_esc_mouse_entered"]
[connection signal="mouse_exited" from="GameScreen/Esc" to="." method="_on_esc_mouse_exited"]
[connection signal="pressed" from="GameScreen/Esc" to="." method="_on_esc_pressed"]
[connection signal="toggled" from="GameScreen/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="value_changed" from="GameScreen/HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="toggled" from="GameScreen/CheckButton2" to="." method="_on_check_button_2_toggled"]
[connection signal="value_changed" from="PauseScreen/box/set/music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="PauseScreen/box/set/SFX" to="." method="_on_sfx_value_changed"]
[connection signal="item_selected" from="PauseScreen/box/set/OptionButton" to="." method="_on_option_button_item_selected"]
[connection signal="pressed" from="PauseScreen/HBoxContainer/Continue" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="PauseScreen/HBoxContainer/Exit" to="." method="_on_exit_pressed"]
